--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@
 
 .droppable-cell {
   z-index: 0;
+  border: 0;
 }
 
 .droppable {
@@ -45,8 +46,12 @@
 
 .numbers {
   position: absolute;
-  margin-left: -15px;
+  margin-left: -20px;
   margin-top: 6px;
+}
+
+.ten{
+  margin-left: -25px;
 }
 
 .horizontal-4 {
@@ -94,3 +99,21 @@
   background-color: blue;
 }
 
+.absolute-center{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.start-game {
+  position: relative;
+}
+
+.blur{
+  filter: blur(1px);
+}
+
+.on-top{
+  z-index: 1;
+}
